# PatternStructureMatcher

./: CMakeLists.txt  README.md  conanfile.py
include/volt/analysis/: pattern_catalog.h  pattern_classifier.h  pattern_cluster_input_adapter.h  pattern_cluster_rule_provider.h  pattern_dxa_topology_provider.h  pattern_matching_shared.h  pattern_runtime_types.h  pattern_service.h  pattern_structure_analysis.h
lattices/: 9R.yml  L12.yml  a7.yml  bcc.yml  bct.yml  cubic_diamond.yml  fcc.yml  fct.yml  hcp.yml  hex_diamond.yml  omega.yml  sc.yml  st.yml
src/: main.cpp
src/analysis/: pattern_classifier.cpp  pattern_cluster_input_adapter.cpp  pattern_cluster_rule_provider.cpp  pattern_dxa_topology_provider.cpp  pattern_matching_shared.cpp  pattern_service.cpp  pattern_structure_analysis.cpp
src/patterns/: pattern_catalog.cpp  pattern_compiler.cpp  pattern_source_loader.cpp  template_structure_loader.cpp
